# native_api_1c

./: Cargo.toml  README.md
native_api_1c_core/: Cargo.toml
native_api_1c_core/src/: interface.rs  lib.rs
native_api_1c_core/src/ffi/: connection.rs  init_done.rs  lang_extender.rs  locale_base.rs  memory_manager.rs  mod.rs  provided_types.rs  user_lang_base.rs
native_api_1c_core/src/interface/: mod.rs  param_type.rs  param_value.rs
native_api_1c_macro/: Cargo.toml
native_api_1c_macro/src/: lib.rs
native_api_1c_macro/src/derive_addin/: mod.rs  parsers.rs  utils.rs
native_api_1c_macro/src/derive_addin/functions/: generate.rs  mod.rs  parse.rs
native_api_1c_macro/src/derive_addin/functions/collectors/: call_as_func.rs  call_as_proc.rs  find_method.rs  func_consts.rs  get_method_name.rs  get_n_params.rs  get_param_def_value.rs  has_ret_val.rs  mod.rs
native_api_1c_macro/src/derive_addin/props/: mod.rs  parse.rs
native_api_1c_macro/src/derive_addin/props/collectors/: find_prop.rs  get_prop_name.rs  get_prop_val.rs  is_prop_readable.rs  is_prop_writable.rs  mod.rs  prop_consts.rs  set_prop_val.rs
native_api_1c_macro/src/extern_functions/: mod.rs  parse.rs
native_api_1c_macro/tests/interface/: functions.rs  props.rs
sample_addin_rs/: Cargo.toml
sample_addin_rs/src/: lib.rs
