[package]
name = "native_api_1c_core"
version = "0.10.0"
edition = "2024"
repository = "https://github.com/Sebekerga/native_api_1c"
license = "MIT"
description = "Core library for Native API 1C"

[dependencies]
widestring = "1.2.1"
syn = { version = "2.0.28", features = ["full"] }
quote = "1.0.32"
chrono = "0.4.26"
